--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cookies": "^0.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "nodemon": "^3.0.3",
+    "universal-cookie": "^7.0.2"
+  },
+  "scripts": {
+    "server": "nodemon serverNew.js"
   }
 }
-
